app/assets/stylesheets/main.css.scss
/* ... */
.clearfix {
  &:before, &:after {
    content: " ";
    display: table;
  }
  &:after {
    clear: both;
  }
}

.main-page-header {
  @extend .clearfix;
  margin-left: 0.5em;
  margin-right: 0.5em;
  margin-bottom: 1em;

  .title {
    font-size: larger;
    font-weight: bold;

    a {
      color: #8D031C;
      &:hover, &:focus {
        outline: none;
        color: #F62E51;
        text-decoration: none;
      }
    }
  }

  .controls {
    float: right;
  }

  &.header-with-controls {
    min-height: 1.25em;
  }
}

.display_card {
  background-color: #FFF;
  margin-bottom: 0.6em;
  @media only screen and (min-width: 768px) {
    border: 1px solid #000;
  }

  .card_title {
    @extend .clearfix;
    margin: 0.2em 0.4em;
    font-size: larger;
  }

  .card-section {
    @extend .clearfix;
    border-top: 1px solid lightgrey;
    padding: .6em;

    &.clickable {
      cursor: pointer;
      &:hover {
        background-color: #BFEEFC;
      }
    }

    &:first-child {
      border-top: 0;
    }

    .link {
      cursor: pointer;
    }

    .title {
      font-size: medium;
      .star {
        height: 25px;
        width: 20px;
        vertical-align: bottom;
      }

      &.big-title {
        font-size: large;
      }
    }

    .timestamp {
      float: right;
      color: darkgrey;
    }

    .description {
      display: block;
      width: 100%;
      float: left;
    }

    .body {
      font-size: large;

      .body-section {
        @extend .clearfix;
        word-wrap: break-word;
        &.photos {
          text-align: center;
          padding-bottom: 0.4em;
          img {
            cursor: pointer;
          }
        }
      }
    }

    .icons {
      @extend .clearfix;
      line-height: 1.5em;
      .glyphicon {
        vertical-align: bottom;
        &.official {
          color: blue;
        }
        &.shadow {
          color: darkgray;
        }
      }
    }

    .form {
      @extend .clearfix;
      padding: 0.2em 0.2em 0;
      line-height: 1.2em;

      .label {
        color: darkgray;
        font-size: small;
        word-wrap: break-word;
      }

      .data {
        font-size: medium;
        margin-bottom: 0.5em;
        word-wrap: break-word;
      }
    }

    .controls {
      float: right;
      div {
        text-align: right;
      }
    }
  }

  .section-with-photo {
    min-height: 56px;

    .section-photo {
      position: absolute;
    }

    .title, .timestamp, .body, .controls, .form {
      margin-left: 60px;
    }
  }

  .section-with-profile-photo {
    .section-photo {
      float: left;
      img {
        max-width: 110px;
        max-height: 110px;
      }
    }

    .title, .timestamp, .body, .controls, .form {
      margin-left: 115px;
    }
  }
}

.calendar-nav {
  div {
    text-align: center;
    height: 1.66em;
    line-height: 1.66em;
    font-size: larger;
  }
}

.profile_photo {
  height: 50px;
  width: 50px;
}

.footer-controls {
  margin-bottom: 0.6em;
  .card-section {
    display: inline-block;
    &:last-child {
      float: right;
    }
  }
}

.alert {
  &.alert-warning {
    font-weight: bold;
    color: orangered;
  }
}

.hidden {
  display: none;
}

@media (max-width: 550px) {
  .top-bar-search {
    display: none;
  }
}

.form-group {
  max-width: 20em;
}

.form-control {
  width: 100%;
}

.highlight {
  color: red;
}

.left {
  float: left !important;
}

.right {
  float: right !important;
}

.controls.button_actions {
  float: right;
}
@media only screen and (max-width: 767px) {
  .controls.button_actions {
    margin-bottom: 20px;
  }
  .navigation.tabs {
    clear: both;
    margin-left: 5px;
  }
}
.navigation.tabs {
  font-size: 130%;
  line-height: 130%;
  > span {
    padding: 5px 8px 5px 12px;
    text-align: center;
    cursor: pointer;
  }
  .active {
    background: #042333;
    border-radius: 5px 5px 0 0;
    color: white;
    font-weight: bold;
    letter-spacing: .5px;
  }
}
.paging {
  background: #ddd;
  border: 1px solid black;
  font-size: 16px;
  text-align: center;
  width: 100%;
  > span {
    padding: 5px 3px;
    display: inline-block;
    &.currentPage {
      font-weight: bold;
    }
  }
  @media only screen and (max-width: 767px) {
    margin: 0 -5%;
    width: 110%;

  }
}

